fixed alignment issues on home page

--- a/styles/base.css
+++ b/styles/base.css
@@ -5,7 +5,8 @@
 }
 
 body {
-    
+    display: grid;
+    grid-template: 1fr auto 1fr/ 1fr;
     background-color: #F7EDE2;
 }
 
@@ -17,7 +18,6 @@ h1, h2, h3, h4 {
 }
 
 header {
-    margin: 0 auto;
     background-color: #84a59da6;
     text-align: center;
 }
@@ -26,7 +26,7 @@ nav {
     display: flex;
 }
 
-nav a, .links a {
+nav a {
     flex: auto;
     background-color: #5c746e;
     padding: .5rem;
@@ -40,26 +40,25 @@ a:hover {
 }
 
 main {
-    margin: 2rem;
+    margin: 2rem .5rem;
     max-width: 100%;
     display: grid;
-    grid-template: 1fr / 1fr .5fr;
+    grid-template: 1fr / 1fr auto;
 }
 
-.card {
+.card, .links {
     padding: 1rem;
     display: flex;
     flex-direction: column;
-    justify-items: center;
 }
 
 .state {
     border-top: 1.5px solid  #F5CAC3;
 }
 
-p, a {
+p {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    padding: 1rem
+    padding: 1rem;
 }
 
 img {
@@ -82,17 +81,13 @@ figure {
 }
 
 .links {
-    margin: 5rem 0;
-    padding: 1rem;
-    display: flex;
-    flex: auto;
-    flex-direction: column;
+    flex: 1;
 }
 
-.links a {
-    flex: auto;
-    background-color: #F5CAC3;
+.links li, .links a {
     color: black;
+    margin: 1rem 0;
+    text-decoration: none;
 }
 
 .links a:hover {
